Fix vertical align of modal close button.

--- a/resources/assets/sass/modal.scss
+++ b/resources/assets/sass/modal.scss
@@ -35,7 +35,7 @@
   border-bottom: 3px solid rgba(198, 201, 199, .3);
 
   .close-modal {
-    top: -15px;
+    top: -10px;
     right: 0;
     position: absolute;
     cursor: pointer;
